DslParser/ParserGrammarRules.txt
S -> MATCH
MATCH -> match MATCH_CONDITION

MATCH_CONDITION -> object operator string_literal MATCH_CONDITION_NEXT
MATCH_CONDITION -> object in open_bracket STRING_LITERAL_LIST close_bracket  MATCH_CONDITION_NEXT
MATCH_CONDITION -> object not_in open_bracket STRING_LITERAL_LIST close_bracket MATCH_CONDITION_NEXT
MATCH_CONDITION_NEXT -> and MATCH_CONDITION
MATCH_CONDITION_NEXT -> or MATCH_CONDITION
MATCH_CONDITION_NEXT -> DATE_CONDITION

STRING_LITERAL_LIST -> string_literal STRING_LITERAL_LIST_NEXT
STRING_LITERAL_LIST_NEXT -> comma string_literal STRING_LITERAL_LIST_NEXT
STRING_LITERAL_LIST_NEXT -> empty_string

DATE_CONDITION -> between datetime_literal and datetime_literal  DATE_CONDITION_NEXT
DATE_CONDITION_NEXT -> LIMIT
DATE_CONDITION_NEXT -> eos

LIMIT -> limit number eos
